--- a/templates/creator_detail.html
+++ b/templates/creator_detail.html
@@ -1,21 +1,23 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h2>{% block title %} {{ creator.creator_name }} {% endblock %}</h2>
+    <div class = "page-header">
+        <h2>
+            {% block title %} {{ creator.creator_name }} {% endblock %}
+        </h2>
+    </div>
 
-    <p>
-        <table><tbody>
-            <tr><td width="20%">ID</td> <td width="80%">{{ creator.creator_id }}</td></tr>
-            <tr><td>Role</td> <td>{{ creator.creator_role }}</td></tr>
+    <div class="container-fluid">
+        <table class="table">
+            <tr><td class="w-5">ID</td> <td>{{ creator.creator_id }}</td></tr>
+            <tr><td class="w-5">Role</td> <td>{{ creator.creator_role }}</td></tr>
             <tr><td colspan="2">{{ creator.creator_desc }}</td></tr>
-        </tbody></table>
-    </p>
+        </table>
+        <br><br>
 
-    <p>
         <img src="{{ creator.creator_img if (creator.creator_img!='') else '/static/not_found.jpg' }}" alt="Creator Image" width="33%" height="33%">
-    </p>
+        <br><br>
 
-    <p>
         <a href="{{ url_for('show_creators') }}">All Creators</a>
-    </p>
+    </div>
 {% endblock %}
