--- a/templates/junction_detail.html
+++ b/templates/junction_detail.html
@@ -1,18 +1,23 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h2>{% block title %} #{{ junction.junction_id }} {% endblock %}</h2>
-    
-    <p>
-        <i>Found in <a href="{{ url_for('show_room', room_id=room_source.room_id)}}">{{ room_source.room_name }}</a></i></br>
-        <i>Targeting <a href="{{ url_for('show_room', room_id=room_dest.room_id)}}">{{ room_dest.room_name }}</a></i></br>
-        <table><tbody>
-            <tr><td width="20%">ID</td> <td width="80%">{{ junction.junction_id }}</td></tr>
-            <tr><td colspan="2">{{ junction.junction_desc }}</td></tr>
-        </tbody></table>
-    </p>
+    <div class = "page-header">
+        <h2>
+            {% block title %} #{{ junction.junction_id }} {% endblock %}
+        </h2>
+    </div>
 
-    <p>
+    <div class="container-fluid">
+        <i>Found in <a href="{{ url_for('show_room', room_id=room_source.room_id)}}">{{ room_source.room_name }}</a></i><br>
+        <i>Targeting <a href="{{ url_for('show_room', room_id=room_dest.room_id)}}">{{ room_dest.room_name }}</a></i>
+        <br><br>
+
+        <table class="table">
+            <tr><td class="w-5">ID</td> <td>{{ junction.junction_id }}</td></tr>
+            <tr><td colspan="2">{{ junction.junction_desc }}</td></tr>
+        </table>
+        <br><br>
+
         <a href="{{ url_for('show_junctions', world_id=junction.world_id) }}">All Junctions</a>
-    </p>
+    </div>
 {% endblock %}
