--- a/templates/account.html
+++ b/templates/account.html
@@ -1,24 +1,39 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h2>{% block title %} New Account {% endblock %}</h2>
+    <div class = "page-header">
+        <h2>
+            {% block title %} New Account {% endblock %}
+        </h2>
+    </div>
 
-    <p>
+    <div class="container-fluid">
         <h4>Please enter data:</h4>
         <form action="{{ url_for('show_new_creator') }}" method="POST">
             {{ form.csrf_token }}
-            <p>
-            <table><tbody>
-                <tr><td width="20%">{{ form.creator.label }}¹</td> <td width="80%">{{ form.creator(size=20) }}</td></tr>
-                <tr><td>{{ form.email.label }}²</td> <td>{{ form.email(size=20) }}</td></tr>
-                <tr><td>{{ form.password.label }}</td> <td>{{ form.password(size=20) }}</td></tr>
-                <tr><td>{{ form.password2.label }}</td> <td>{{ form.password2(size=20) }}</td></tr>
-                <tr><td>{{ form.invitation.label }}³</td> <td>{{ form.invitation(size=20) }}</td></tr>
-            </tbody></table>
+            <div class="form-group">
+                <label for="creator">{{ form.creator.label }} ¹</label>
+                {{ form.creator(size=20, class="form-control") }}
+            </div>
+            <div class="form-group">
+                <label for="email">{{ form.email.label }} ²</label>
+                {{ form.email(size=20, class="form-control") }}
+            </div>
+            <div class="form-group">
+                <label for="password">{{ form.password.label }}</label>
+                {{ form.password(size=20, class="form-control") }}
+            </div>
+            <div class="form-group">
+                <label for="password2">{{ form.password2.label }}</label>
+                {{ form.password2(size=20, class="form-control") }}
+            </div>
+            <div class="form-group">
+                <label for="invitation">{{ form.invitation.label }} ³</label>
+                {{ form.invitation(size=20, class="form-control") }}
+            </div>
             ¹ Also used as your login, may not contain spaces<br>
             ² Only used to send notifications about account changes like e-mail address changes<br>
-            ³ Currently you need an invitiation code. Just <a href="{{ url_for('show_index')}}">get in contact with me</a> to get one
-            </p>
+            ³ Currently you need an invitation code. Just <a href="{{ url_for('show_index')}}">get in contact with me</a> to get one
             <ul class="errors">
                 {% for error in form.creator.errors %}
                     <li>{{ error }}</li>
@@ -39,7 +54,7 @@
                     <li>{{ error }}</li>
                 {% endfor %}
             </ul>
-            <input type="submit" value="Create">
-        </form>    
-    </p>
+            <button type="submit" class="btn btn-default">Create</button>
+        </form>
+    </div>
 {% endblock %}
