--- a/templates/account_detail.html
+++ b/templates/account_detail.html
@@ -1,20 +1,29 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h2>{% block title %} Edit Account {% endblock %}</h2>
+    <div class = "page-header">
+        <h2>
+            {% block title %} Edit Account {% endblock %}
+        </h2>
+    </div>
 
-    <p>
+    <div class="container-fluid">
         <h4>Please enter data:</h4>
         <form action="{{ url_for('show_my_creator') }}" method="POST">
             {{ form1.csrf_token }}
             {{ form1.operation }}
-            <p>
-                <table><tbody>
-                <tr><td width="20%">{{ form1.email.label }}</td> <td width="80%">{{ form1.email(size=20) }}</td></tr>
-                <tr><td>{{ form1.description.label }}</td> <td>{{ form1.description(size=40) }}</td></tr>
-                <tr><td>{{ form1.url.label }}</td> <td>{{ form1.url(size=20) }}</td></tr>
-                </tbody></table>
-            </p>
+            <div class="form-group">
+                <label for="email">{{ form1.email.label }}</label>
+                {{ form1.email(size=20, class="form-control") }}
+            </div>
+            <div class="form-group">
+                <label for="description">{{ form1.description.label }}</label>
+                {{ form1.description(size=40, class="form-control") }}
+            </div>
+            <div class="form-group">
+                <label for="url">{{ form1.url.label }}</label>
+                {{ form1.url(size=20, class="form-control") }}
+            </div>
             {% if operation == "mail" %}
                 <ul class="errors">
                     {% for error in form1.email.errors %}
@@ -27,23 +36,22 @@
                     {% endfor %}
                 </ul>
             {% endif %}
-            <input type="submit" value="Update">
+            <button type="submit" class="btn btn-default">Update</button>
         </form>
-    </p>
+        <br><br>
 
-    <br><hr><br>
-
-    <p>
         <h4>Set new password:</h4>
         <form action="{{ url_for('show_my_creator') }}" method="POST">
             {{ form2.csrf_token }}
             {{ form2.operation }}
-            <p>
-                <table><tbody>
-                <tr><td width="20%">{{ form2.password.label }}</td> <td width="80%">{{ form2.password(size=20) }}</td></tr>
-                <tr><td>{{ form2.password2.label }}</td> <td>{{ form2.password2(size=20) }}</td></tr>
-                </tbody></table>
-            </p>
+            <div class="form-group">
+                <label for="password">{{ form2.password.label }}</label>
+                {{ form2.password(size=20, class="form-control") }}
+            </div>
+            <div class="form-group">
+                <label for="password2">{{ form2.password2.label }}</label>
+                {{ form2.password2(size=20, class="form-control") }}
+            </div>
             {% if operation == "pass" %}
                 <ul class="errors">
                     {% for error in form2.password.errors %}
@@ -51,22 +59,18 @@
                     {% endfor %}
                 </ul>
             {% endif %}
-            <input type="submit" value="Set">
+            <button type="submit" class="btn btn-default">Set</button>
         </form>
-    </p>
+        <br><br>
 
-    <br><hr><br>
-    
-    <p>
         <h4>Delete this user account:</h4>
         <form action="{{ url_for('show_my_creator') }}" method="POST">
             {{ form3.csrf_token }}
             {{ form3.operation }}
-            <p>
-                <table><tbody>
-                <tr><td width="20%">{{ form3.confirmation.label }}</td> <td width="80%">{{ form3.confirmation(size=20) }}</td></tr>
-                </tbody></table>
-            </p>
+            <div class="form-group">
+                <label for="confirmation">{{ form3.confirmation.label }}</label>
+                {{ form3.confirmation(size=20, class="form-control") }}
+            </div>
             {% if operation == "delete" %}
                 <ul class="errors">
                     {% for error in form3.confirmation.errors %}
@@ -74,7 +78,7 @@
                     {% endfor %}
                 </ul>
             {% endif %}
-            <input type="submit" value="Delete">
-        </form>    
-    </p>
+            <button type="submit" class="btn btn-default">Delete</button>
+        </form>
+    </div>
 {% endblock %}
