--- a/templates/creator.html
+++ b/templates/creator.html
@@ -1,16 +1,21 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h2>{% block title %} All Creators {% endblock %}</h2>
+    <div class = "page-header">
+        <h2>
+            {% block title %} All Creators {% endblock %}
+        </h2>
+    </div>
 
-    <p>
+    <div class="container-fluid">
         {% if creators.count() == 0 %}
-        No entries found.
+            No entries found.
+        {% else %}
+            <div class="list-group">
+                {% for creator in creators %}
+                    <a href="{{ url_for('show_creator', creator_id=creator.creator_id)}}" class="list-group-item">{{ creator.creator_name }}</a>
+                {% endfor %}
+            </div>
         {% endif %}
-        <ul>
-            {% for creator in creators %}
-            <li><a href="{{ url_for('show_creator', creator_id=creator.creator_id)}}">{{ creator.creator_name }}</a></li>
-            {% endfor %}
-        </ul>
-    </p>    
+    </div>
 {% endblock %}
