--- a/templates/index.html
+++ b/templates/index.html
@@ -1,17 +1,20 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h2>{% block title %} Welcome to {% endblock %}</h2>
+    <div class = "page-header">
+        <h2>
+            {% block title %} Welcome to {% endblock %}
+        </h2>
+    </div>
 
-    <p>
-        <img src="{{ prefix }}/static/kringle_logo.png" alt="Kringle Logo" width="50%" height="50%">
-        <img src="{{ prefix }}/static/info_logo.png" alt="Info Logo" width="25%" height="25%">
-    </p>
+    <img src="{{ prefix }}/static/kringle_logo.png" alt="Kringle Logo" width="50%" height="50%">
+    <img src="{{ prefix }}/static/info_logo.png" alt="Info Logo" width="25%" height="25%">
+    <br><br>
 
-    <p>
+    <div class="container-fluid">
         <b>Kringle Info</b> <i>/ˈkrɪŋ.ɡəl in·fo/</i>. An online CTF solution editor inspired by <a href="https://www.sans.org/mlp/holiday-hack-challenge/">SANS Holiday Hack Challenge &amp; KringleCon</a>.<br>
         Currently WIP - work in progress. 😀<br>
         <br>
         If you want to get in touch with me just visit my <a href="https://github.com/Benjamin-BK-Krueger">GitHub page</a> or my <a href="https://blk8.de">WordPress site</a>. 
-    </p>
+    </div>
 {% endblock %}
