--- a/templates/login.html
+++ b/templates/login.html
@@ -1,18 +1,24 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h2>{% block title %} Login {% endblock %}</h2>
-    
-    <p>
+    <div class = "page-header">
+        <h2>
+            {% block title %} Login {% endblock %}
+        </h2>
+    </div>
+
+    <div class="container-fluid">
         <h4>Enter your login data:</h4>
         <form action="{{ url_for('show_login') }}" method="POST">
             {{ form.csrf_token }}
-            <p>
-                <table><tbody>
-                <tr><td width="30%">{{ form.creator.label }}</td> <td width="70%">{{ form.creator(size=20) }}</td></tr>
-                <tr><td>{{ form.password.label }}</td> <td>{{ form.password(size=20) }}</td></tr>
-                </tbody></table>
-            </p>
+            <div class="form-group">
+                <label for="creator">{{ form.creator.label }}</label>
+                {{ form.creator(size=20, class="form-control") }}
+            </div>
+            <div class="form-group">
+                <label for="password">{{ form.password.label }}</label>
+                {{ form.password(size=20, class="form-control") }}
+            </div>
             <ul class="errors">
                 {% for error in form.creator.errors %}
                     <li>{{ error }}</li>
@@ -23,18 +29,17 @@
                     <li>{{ error }}</li>
                 {% endfor %}
             </ul>
-
-            <p>
-                {{ form.remember() }} {{ form.remember.label }}
-            </p>
+            <div class="checkbox">
+                <label>{{ form.remember() }} {{ form.remember.label }}</label>
+            </div>
             {% if form.remember.errors %}
-            <ul class="errors">
-                {% for error in form.remember.errors %}
-                    <li>{{ error }}</li>
-                {% endfor %}
-            </ul>
-        {% endif %}
-            <input type="submit" value="Log in">
+                <ul class="errors">
+                    {% for error in form.remember.errors %}
+                        <li>{{ error }}</li>
+                    {% endfor %}
+                </ul>
+            {% endif %}
+            <button type="submit" class="btn btn-default">Log in</button>
         </form>
-    </p>
+    </div>
 {% endblock %}
