--- a/templates/objective.html
+++ b/templates/objective.html
@@ -1,16 +1,21 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h2>{% block title %} All Objectives {% endblock %}</h2>
+    <div class = "page-header">
+        <h2>
+            {% block title %} All Objectives {% endblock %}
+        </h2>
+    </div>
 
-    <p>
+    <div class="container-fluid">
         {% if objectives.count() == 0 %}
-        No entries found.
+            No entries found.
+        {% else %}
+            <div class="list-group">
+                {% for objective in objectives %}
+                    <a href="{{ url_for('show_objective', objective_id=objective.objective_id)}}" class="list-group-item">{{ objective.objective_name }} ({{ objective.objective_title }})</a>
+                {% endfor %}
+            </div>
         {% endif %}
-        <ul>
-            {% for objective in objectives %}
-            <li><a href="{{ url_for('show_objective', objective_id=objective.objective_id)}}">{{ objective.objective_name }}</a> ({{ objective.objective_title }})</li>
-            {% endfor %}
-        </ul>
-    </p>
+    </div>
 {% endblock %}
