--- a/templates/person_detail.html
+++ b/templates/person_detail.html
@@ -1,21 +1,25 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h2>{% block title %} {{ person.person_name }} {% endblock %}</h2>
-    
-    <p>
-        <i>Found in <a href="{{ url_for('show_room', room_id=room.room_id)}}">{{ room.room_name }}</a></i></br>
-        <table><tbody>
-            <tr><td width="20%">ID</td> <td width="80%">{{ person.person_id }}</td></tr>
+    <div class = "page-header">
+        <h2>
+            {% block title %} {{ person.person_name }} {% endblock %}
+        </h2>
+    </div>
+
+    <div class="container-fluid">
+        <i>Found in <a href="{{ url_for('show_room', room_id=room.room_id)}}">{{ room.room_name }}</a></i>
+        <br><br>
+
+        <table class="table">
+            <tr><td class="w-5">ID</td> <td>{{ person.person_id }}</td></tr>
             <tr><td colspan="2">{{ person.person_desc }}</td></tr>
-        </tbody></table>
-    </p>
+        </table>
+        <br><br>
 
-    <p>
         <img src="{{ person.person_img if (person.person_img!='') else '/static/not_found.jpg' }}" alt="Person Image" width="33%" height="33%">
-    </p>
+        <br><br>
 
-    <p>
         <a href="{{ url_for('show_persons', world_id=person.world_id) }}">All Persons</a>
-    </p>
+    </div>
 {% endblock %}
