--- a/templates/quest_detail.html
+++ b/templates/quest_detail.html
@@ -1,15 +1,22 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h2>{% block title %} Single Quest {% endblock %}</h2>
+    <div class = "page-header">
+        <h2>
+            {% block title %} Single Quest {% endblock %}
+        </h2>
+    </div>
 
-    <p>
+    <div class="container-fluid">
         <form action="{{ url_for('show_quest', objective_id=objective_id)}}" method="POST">
-            <textarea name="quest" cols="50" rows="10">{{ quest }}</textarea>
+            <div class="form-group">
+                <label for="quest">Quest:</label>
+                <textarea name="quest" cols="50" rows="10" id="quest" class="form-control">{{ quest }}</textarea>
+            </div>
             <script>
                 const easyMDE = new EasyMDE();
             </script>
-            <input type="submit" value="Submit">
+            <button type="submit" class="btn btn-default">Submit</button>
         </form>
-    </p>
+    </div>
 {% endblock %}
