--- a/templates/solution_detail.html
+++ b/templates/solution_detail.html
@@ -1,21 +1,23 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h2>{% block title %} Single Solution {% endblock %}</h2>
+    <div class = "page-header">
+        <h2>
+            {% block title %} Single Solution {% endblock %}
+        </h2>
+    </div>
 
-    <p>
+    <div class="container-fluid">
         {{ mdsolution|safe }}
-    </p>
+        <br><br>
 
-    {% if (current_user.creator_id != solution.creator_id) and (current_user.creator_role == "creator" or current_user.creator_role == "user") %}
-    <p>
-        <form action="{{ url_for('show_liked_solution', solution_id=solution.solution_id) }}" method="GET">
-            <input type="submit" value="Like / Unlike">
-        </form>
-    </p>
-    {% endif %}
+        {% if (current_user.creator_id != solution.creator_id) and (current_user.creator_role == "creator" or current_user.creator_role == "user") %}
+            <form action="{{ url_for('show_liked_solution', solution_id=solution.solution_id) }}" method="GET">
+                <button type="submit" class="btn btn-default">Like / Unlike</button>
+            </form>
+        {% endif %}
+        <br><br>
 
-    <p>
         <a href="{{ url_for('show_objective', objective_id=objective.objective_id) }}">Back to Objective</a>
-    </p>
+    </div>
 {% endblock %}
