--- a/templates/storage.html
+++ b/templates/storage.html
@@ -1,39 +1,40 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h2>{% block title %} S3 Storage {% endblock %}</h2>
+    <div class = "page-header">
+        <h2>
+            {% block title %} S3 Storage {% endblock %}
+        </h2>
+    </div>
 
-    <p>
+    <div class="container-fluid">
         <h4>Upload your file here:</h4>
-        <form method="POST" action="{{ url_for('show_storage') }}" enctype=multipart/form-data>
+        <form action="{{ url_for('show_storage') }}" method="POST" enctype=multipart/form-data>
             {{ form.csrf_token }}
-            <p>
+            <div class="form-group">
                 {{ form.file }}
-                <input type=submit value=Upload>
-            </p>
+            </div>
+            <button type="submit" class="btn btn-default">Upload</button>
             <ul class="errors">
                 {% for error in form.file.errors %}
                     <li>{{ error }}</li>
                 {% endfor %}
             </ul>
         </form>
-    </p>
+        <br><br>
 
-    <br><hr><br>
-    
-    <p>
         <h4>These are your uploaded files:</h4>
         Click on the options to download or delete them.<br>
         If you click on <i>copy markdown link</i> the link to that image which you can use in your markdown snippets will be copied to your clipboard.<br>
         <ul>
         {% for item in contents %}
             <li>
-                <b>{{ item.Key }}</b></div>: [<a href="{{ url_for('do_download', creatorname='.', filename=item.Key) }}">download</a>, <a href="{{ url_for('do_delete', creatorname='.', filename=item.Key) }}">delete</a>, <a href="#" onclick="CopyToClipboard('{{ item.Key }}');return false;">copy markdown link</a>]<br>
+                <b>{{ item.Key }}</b>: [<a href="{{ url_for('do_download', creatorname='.', filename=item.Key) }}">download</a>, <a href="{{ url_for('do_delete', creatorname='.', filename=item.Key) }}">delete</a>, <a href="#" onclick="CopyToClipboard('{{ item.Key }}');return false;">copy markdown link</a>]
             </li>
         {% endfor %}
         </ul>
         {% for item in contents %}
         <div id="{{ item.Key }}" style="font-size:0;">![{{ item.Key }}](https://eu2.contabostorage.com/6c12e0aef74840bf9c331581d3f4d52c:kringle-public/{{ item.Key }})</div>
         {% endfor %}
-    </p>
+    </div>
 {% endblock %}
